Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -1,43 +1,44 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
-    <title>&lambda;(Chris Mendis) === Chris Mendis</title>
-    <link href='http://fonts.googleapis.com/css?family=Playfair+Display:400,900,700italic' rel='stylesheet' type='text/css'>
-    <style>
-      body, h1, h2, p {
-        margin: 0;
-        padding: 0;
-      }
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>Chris Mendis&#39; Blog by chrismendis</title>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script src="javascripts/main.js"></script>
+    <!--[if lt IE 9]>
+      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
-      body {
-        max-width: 700px;
-        width: 60%;
-        margin: 100px auto 0;
-        background: rgba(133, 135, 141, 0.7);
-      }
-
-      h1 {
-        font: italic 700 72px/1.2 "playfair display";
-      }
-
-      h2 {
-        font: normal 900 72px/1.2 "playfair display";
-      }
-
-      p {
-        margin: 40px 0 0;
-        font: 400 18px/1 "playfair display";
-      }
-
-      span {
-        padding: 5px 30px 0 0;
-        border-top: 3px solid black;
-      }
-    </style>
   </head>
   <body>
-    <h1>Chris Mendis</h1>
-    <h2>Full-Stack Web Dev</h2>
-    <p><span>@chrismendis on everything</span></p>
+
+      <header>
+        <h1>Chris Mendis&#39; Blog</h1>
+        <p>permute(“Chris Mendis”) → [“Cinder Shims”, …, “Schism Diner”]</p>
+      </header>
+
+      <div id="banner">
+        <span id="logo"></span>
+
+        <a href="https://github.com/chrismendis" class="button fork"><strong>View On GitHub</strong></a>
+      </div><!-- end banner -->
+
+    <div class="wrapper">
+      <nav>
+        <ul></ul>
+      </nav>
+      <section>
+        <p>I'll post random thoughts and sundry ramblings here from time to exceedingly rare time.</p>
+      </section>
+      <footer>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></small></p>
+      </footer>
+    </div>
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+    
   </body>
 </html>
